My second comment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
 <title>flybox_home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    </head>
 <body>
-
+    <h1>
+        Flybox
+    </h1>
+    <p1>
+        earn while you fly
+    </p1>
+    <button type="button">List your trip</button>
+    <button type="button">Find a flyer</button>
 </body>
 
 </html>
