added a button to trip_list.html

--- a/trip_list.html
+++ b/trip_list.html
@@ -59,6 +59,7 @@
                 </form>
             </div>
         </form>
+        <button type="submit">Confirm</button>
     </div>
 </div>
 </body>
