--- a/accepted.html
+++ b/accepted.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<title>request_list</title>
+<title>accepted</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/styles/index.css">
     </head>
 <body>
-<h1>REQUESTS</h1><br>
-<br>
-<p1>...</p1><br>
-<button type="button" onclick="window.location.href = '';">Accept</button>
-<button type="button" onclick="window.location.href = '';">Reject</button>
+<h1>Your request have been accepted</h1><br>
+<button type="button" onclick="window.location.href = '';">Pay now</button>
 </body>
 </html>
