--- a/request.html
+++ b/request.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/styles/index.css">
     </head>
-
+<body>
 <p1>Flight number:</p1><br>
 <br>
 <p2>Cargo Details</p2><br>
@@ -20,4 +20,5 @@
 <input type="checkbox">Insure your package for just 50RF
 <br>
 <button type="button" onclick="window.location.href = '';">REQUEST NOW</button>
-
+</body>
+</html>
