--- a/trip_list.html
+++ b/trip_list.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
 <title>List your trip</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" type="text/css" href="/styles/index.css">
+    </head>
 <body>
     <div class="container">
     <h1>List your trip</h1>
