--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>flybox_home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="/styles/index.css">
     </head>
 <body>
     <h1>
@@ -13,8 +12,8 @@
     <p1>
         earn while you fly
     </p1>
-    <button type="button" onclick="window.location.href = 'trip_list.html';">List your trip</button>
-    <button type="button" onclick="window.location.href = 'find_a_flyer.html';">Find a flyer</button>
+    <button type="button">List your trip</button>
+    <button type="button">Find a flyer</button>
 </body>
 
 </html>
