--- a/trip_list.html
+++ b/trip_list.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
-  <title>index page</title>
+  <meta name="author" content="Mefiz">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>Trip Listing</title>
   <!-- Favicon -->
   <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
