--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                  </div>
                   <div class="text-muted font-italic"><small><p class="logo-text"><b>FLYBOX</b></p><p class="sub-title">Geneveyne Fonuveyne</p><span class="text-success font-weight-700"></span></small></div>
                   <div class="text-center">
-                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'trip_list.html';">List your trip</button><button type="button" class="btn btn-primary">Find a flyer</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'trip_list.html';">List your trip</button><button type="button" class="btn btn-primary" onclick="window.location.href = 'find_a_flyer.html';">Find a flyer</button>
                   </div>
                 </form>
               </div>
