--- a/trip_list.html
+++ b/trip_list.html
@@ -29,7 +29,7 @@
       <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-blue rounded">
                     <div class="container">
-                      <a class="navbar-brand" href="#">Home</a>
+                      <a class="navbar-brand" href="#">Trip Listing</a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-inner-success" aria-controls="nav-inner-success" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -176,7 +176,7 @@
                                                 <input type="text" placeholder="Rate per Kg" class="form-control">
                                               </div>
                                             <div class="custom-control custom-checkbox mb-3">
-                                              <input class="custom-control-input" id="customCheck2" type="checkbox" checked="">
+                                              <input class="custom-control-input" id="customCheck2" type="checkbox">
                                               <label class="custom-control-label" for="customCheck2">
                                                 <span>Money</span>
                                                 
@@ -198,7 +198,7 @@
                                               <input type="text" placeholder="Rate per Kg" class="form-control col-md-2">
                                             </div>
                                           <div class="custom-control custom-checkbox mb-3">
-                                            <input class="custom-control-input" id="customCheck4" type="checkbox" checked="">
+                                            <input class="custom-control-input" id="customCheck4" type="checkbox">
                                             <label class="custom-control-label" for="customCheck4">
                                               <span>Delivery</span>
                                               
@@ -216,7 +216,7 @@
                     <div class="col-12">
                       <div class="custom-control custom-control-alternative custom-checkbox">
                         <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                        <label class="custom-control-label" for="customCheckRegister"><span>I agree with the <a href="#">Privacy Policy</a></span></label>
+                        <label class="custom-control-label" for="customCheckRegister"><span>I agree with the <a href="#">Privacy Policy & Terms of Service</a></span></label>
                       </div>
                     </div>
                   </div>
