Finished request.html

--- a/flyers.html
+++ b/flyers.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Mefiz">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>Find a flyer</title>
+  <title>Flyer</title>
   <!-- Favicon -->
   <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -29,7 +29,7 @@
       <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-blue rounded">
                     <div class="container">
-                      <a class="navbar-brand" href="#">Find A Flyer</a>
+                      <a class="navbar-brand" href="#">Flyers</a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-inner-success" aria-controls="nav-inner-success" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -98,7 +98,7 @@
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td>Lammah Ahmed</td>
+                                      <td><a href="request.html" style="color: #8898aa;">Lammah Ahmed</a></td>
                                       <td>Male'</td>
                                       <td>Malaysia</td>
                                       <td>12<sup>th</sup> Jul 2019</td>
