--- a/request.html
+++ b/request.html
@@ -9,14 +9,14 @@
   <meta name="author" content="Creative Tim">
   <title>Request</title>
   <!-- Favicon -->
-  <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../assets/css/argon.css?v=1.1.0" rel="stylesheet">
+  <link type="text/css" href="assets/css/argon.css?v=1.1.0" rel="stylesheet">
 </head>
 
 <body style="background-image: linear-gradient(#0984e3, #81ecec); ">
@@ -33,14 +33,14 @@
               <div class="col-lg-3 order-lg-2">
                 <div class="card-profile-image">
                   <a href="#">
-                    <img src="/images/face.svg" class="rounded-circle" style="width:40vw;">
+                    <img src="images/face.svg" class="rounded-circle" style="width:40vw;">
                   </a>
                 </div>
               </div>
               <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
                 <div class="card-profile-actions py-4 mt-lg-0">
-                  <a href="#" class="btn btn-sm btn-info mr-4">Back</a>
-                  <a href="#" class="btn btn-sm btn-default float-right">Home</a>
+                  <a href="flyers.html" class="btn btn-sm btn-info mr-4">Back</a>
+                  <a href="index.html" class="btn btn-sm btn-default float-right">Home</a>
                 </div>
               </div>
               <div class="col-lg-4 order-lg-1">
