--- a/trip_list.html
+++ b/trip_list.html
@@ -8,14 +8,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>Trip Listing</title>
   <!-- Favicon -->
-  <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../assets/css/argon.css?v=1.1.0" rel="stylesheet">
+  <link type="text/css" href="assets/css/argon.css?v=1.1.0" rel="stylesheet">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
@@ -37,8 +37,8 @@
                         <div class="navbar-collapse-header">
                           <div class="row">
                             <div class="col-6 collapse-brand">
-                              <a href="./index.html">
-                                <img src="./logo.png" alt="logo">
+                              <a href="index.html">
+                                <img src="images/logo.png" alt="logo">
                               </a>
                             </div>
                             <div class="col-6 collapse-close">
@@ -51,20 +51,20 @@
                         </div>
                         <ul class="navbar-nav ml-lg-auto">
                           <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="#">
-                              <i class="ni ni-favourite-28"></i>
+                            <a class="nav-link nav-link-icon" href="index.html">
+                              <i class="ni ni-bold-up"></i>
                               <span class="nav-link-inner--text d-lg-none">Discover</span>
                             </a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link nav-link-icon" href="#">
-                              <i class="ni ni-notification-70"></i>
+                              <i class="ni ni-box-2"></i>
                               <span class="nav-link-inner--text d-lg-none">Profile</span>
                             </a>
                           </li>
                           <li class="nav-item dropdown">
                             <a class="nav-link nav-link-icon" href="#" id="nav-inner-success_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="ni ni-settings-gear-65"></i>
+                              <i class="ni ni-bullet-list-67"></i>
                               <span class="nav-link-inner--text d-lg-none">Settings</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-inner-success_dropdown_1">
@@ -178,7 +178,7 @@
                                             <div class="custom-control custom-checkbox mb-3">
                                               <input class="custom-control-input" id="customCheck2" type="checkbox">
                                               <label class="custom-control-label" for="customCheck2">
-                                                <span>Money</span>
+                                                <span>Cash</span>
                                                 
                                               </label>
                                             </div>
