--- a/find_a_flyer.html
+++ b/find_a_flyer.html
@@ -107,7 +107,7 @@
                                                 <span>Cargo</span>
                                               </label>
                                             </div>
-                                            <div class="form-group">
+                                            <div>
                                                 <input type="text" placeholder="Weight of cargo" class="form-control col-md-2">
                                               </div>
                                             <div class="custom-control custom-checkbox mb-3">
@@ -115,8 +115,10 @@
                                               <label class="custom-control-label" for="customCheck2">
                                                 <span>Cash</span>
                                               </label>
-                                              <input type="text" placeholder="Amount" class="form-control col-md-2">
                                             </div>
+                                            <div>
+                                            <input type="text" placeholder="Amount" class="form-control col-md-2">
+                                          </div>
                                           </div>   
 
                                         </div> 
