--- a/flyers.html
+++ b/flyers.html
@@ -98,7 +98,7 @@
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td><a href="request.html" style="color: #8898aa;">Lammah Ahmed</a></td>
+                                      <td><a href="request.html" style="color: #8898aa;">Jinaan Lannister, King Slayer</a></td>
                                       <td>Male'</td>
                                       <td>Malaysia</td>
                                       <td>12<sup>th</sup> Jul 2019</td>
