--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img src="/images/logo.jpg"></img>
                  </div>
                   <div class="text-center">
-                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'trip_list.html';">List your trip</button><button type="button" class="btn btn-primary" onclick="window.location.href = 'find_a_flyer.html';">Find a flyer</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'trip_list.html';">Sell your KGs</button><button type="button" class="btn btn-primary" onclick="window.location.href = 'find_a_flyer.html';">Find a flyer</button>
                   </div>
                 </form>
               </div>
