--- a/request.html
+++ b/request.html
@@ -33,7 +33,7 @@
               <div class="col-lg-3 order-lg-2">
                 <div class="card-profile-image">
                   <a href="#">
-                    <img src="images/face.svg" class="rounded-circle" style="width:40vw;">
+                    <img src="images/face.jpg" style="width:40vw;border-radius:40vw;">
                   </a>
                 </div>
               </div>
@@ -46,14 +46,14 @@
               <div class="col-lg-4 order-lg-1">
                 <div class="card-profile-stats d-flex justify-content-center">
                   <div>
-                    <span class="heading">5/10</span>
+                    <span class="heading">9/10</span>
                     <span class="description">Rating</span>
                   </div>
                 </div>
               </div>
             </div>
             <div class="text-center mt-5">
-              <h3>Lammah Ahmed<span class="font-weight-light"></h3>
+              <h3>Jinaan Lannister, King Slayer<span class="font-weight-light"></h3>
               <div class="h6 font-weight-300"></div><p>Origin: Male'</p><p class="Destination">Destination: Malaysia</p></div>
             </div>
             <div class="mt-5 py-5 border-top text-center">
