--- a/requests_flyer_info.html
+++ b/requests_flyer_info.html
@@ -1,27 +1,13 @@
-<!--
 
-=========================================================
-* Argon Design System - v1.1.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/argon-design-system
-* Copyright 2019 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
+  <meta name="description" content="Requests for flyers">
   <meta name="author" content="Creative Tim">
-  <title>Argon Design System - Free Design System for Bootstrap 4</title>
+  <title>Requests for flyers</title>
   <!-- Favicon -->
   <link href="assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -31,13 +17,14 @@
   <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
   <link type="text/css" href="assets/css/argon.css?v=1.1.0" rel="stylesheet">
+  <link type="text/css" href="styles/requests.css" rel="stylesheet">
 </head>
 
 <body>
 
   <main>
-    <section class="section section-shaped section-lg">
-      <div class="shape shape-style-1 bg-gradient-default">
+    <section class="section-shaped">
+      <div class="shape shape-style-1">
         <span></span>
         <span></span>
         <span></span>
@@ -52,7 +39,7 @@
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
 
-              <div class="card-body px-lg-5 py-lg-5">
+              <div>
                 <div class="text-center text-muted mb-4">
                   <small>REQUESTS</small>
                 </div>
@@ -77,8 +64,10 @@
                       </tr>
                     </tbody>
                   </table>
-                  <button type="button" class="btn btn-primary ">Accept</button><button type="button" class="btn btn-primary ">Reject</button>
-                </div> 
+                </div>
+               <div style="text-align: center; transform: translate(0px, -3vh);" >
+                <button type="button" class="btn btn-primary">Accept</button><button type="button" class="btn btn-primary ">Reject</button>
+                </div>
               </div>
             </div>
           </div>
