--- a/flyers.html
+++ b/flyers.html
@@ -84,7 +84,8 @@
 
               <div class="card-body px-lg-5 py-lg-5">
 
-                <form role="form">        
+                <form role="form"> 
+                  <div class="container">       
                                 <table class="table table-striped">
                                   <thead>
                                     <tr>
@@ -124,7 +125,7 @@
                                   </tbody>
                                 </table>
 
-                 
+                              </div>
              </div>   
 
             </div> 
