--- a/trip_list.html
+++ b/trip_list.html
@@ -221,7 +221,7 @@
                     </div>
                   </div>
                   <div class="text-center">
-                    <button type="button" class="btn btn-primary mt-4">CONFIRM</button>
+                    <button type="button" class="btn btn-primary mt-4" onclick="window.location.href = 'requests_for_flyers.html';">CONFIRM</button>
                   </div>
                 </form>
               </div>
@@ -230,7 +230,7 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> 
   <!-- Core -->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/popper/popper.min.js"></script>
