--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span></span>
         <span></span>
       </div>
-      <div class="container pt-lg-md">
+      <div class="container pt-5  ">
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
@@ -45,7 +45,7 @@
                 </div>
                 <form role="form">
                  <div class ="logo">
-                    <img src="/images/logo.jpg"></img>
+                    <img src="/images/logo.png"></img>
                  </div>
                   <div class="text-center">
                     <button type="button" class="btn btn-primary" onclick="window.location.href = 'trip_list.html';">Sell your KGs</button><button type="button" class="btn btn-primary" onclick="window.location.href = 'find_a_flyer.html';">Find a flyer</button>
